--- a/static/css/insurancesmart.css
+++ b/static/css/insurancesmart.css
@@ -350,7 +350,7 @@ img {
   display: -ms-flexbox;
   display: flex;
   padding-top: 100px;
-  padding-bottom: 170px;
+  padding-bottom: 100px;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
@@ -359,11 +359,14 @@ img {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  background-image: -webkit-linear-gradient(270deg, rgba(51, 51, 51, .8), rgba(51, 51, 51, .8)), url('../images/joshua-rodriguez-583392-unsplash.jpg');
-  background-image: linear-gradient(180deg, rgba(51, 51, 51, .8), rgba(51, 51, 51, .8)), url('../images/joshua-rodriguez-583392-unsplash.jpg');
-  background-position: 0px 0px, 50% 50%;
-  background-size: auto, cover;
+  color: #fff;
+  background-position: center;
+  background-size: cover;
   text-align: left;
+}
+.section-dark .image-overlay {
+  background: rgba(51, 51, 51, .8);
+  opacity: 1;
 }
 
 .banner-photo {
@@ -649,12 +652,16 @@ img {
   -ms-flex-pack: start;
   justify-content: flex-start;
   background-color: transparent;
+  margin-bottom: 70px;
 }
 
 .testimony-slide {
   width: 33.33%;
   height: auto;
   padding: 10px;
+}
+.testimony-slide a {
+  color: #333333;
 }
 
 .mask {
@@ -885,10 +892,8 @@ img {
   padding-top: 100px;
   padding-bottom: 100px;
   background-color: #274f63;
-  background-image: -webkit-linear-gradient(270deg, rgba(51, 51, 51, .89), rgba(51, 51, 51, .89)), url('../images/pregnant-couple.jpg');
-  background-image: linear-gradient(180deg, rgba(51, 51, 51, .89), rgba(51, 51, 51, .89)), url('../images/pregnant-couple.jpg');
-  background-position: 0px 0px, 50% 50%;
-  background-size: auto, cover;
+  background-position: center;
+  background-size: cover;
   color: #fff;
 }
 
