--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/insurancesmart.css">
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/is.css">
-    <title>{{ block "title" . }}{{ end }}</title>
+    <title>{{ block "title" . }}{{ .Title }} | {{ $.Site.Title }}{{ end }}</title>
     <meta name="description" content="{{ if .Description }}{{ .Description }}{{ else }}{{ $.Site.Params.Description }}{{ end }}"></meta>
 </head>
 <body>
