--- a/layouts/partials/components/content-left.html
+++ b/layouts/partials/components/content-left.html
@@ -1,16 +1,16 @@
 <section class="section-light">
-    {{ $m := .image_settings.mask }}
-    <div {{ if eq $m "large to small" -}}class="polygon-large-to-small"{{- end }} style="background-image: url({{ .image_settings.image }})">
+    {{ $m := .cLeft.image_settings.mask }}
+    <div {{ if eq $m "large to small" -}}class="polygon-large-to-small"{{- end }}{{ if eq $m "small to large" -}}class="polygon-small-to-large"{{- end }} style="background-image: url({{ .cUrl }}w_1600,q_50{{ .cLeft.image_settings.image }})">
         <div class="div-block _2"></div>
     </div>
     <div class="container">
         <div class="flex-row">
             <div class="hero-content-copy">
-                {{ .content | markdownify }}
-                {{ if eq .button_settings.show true }}
-                {{ $l := replace .button_settings.link ".md" "" }}
+                {{ .cLeft.content | markdownify }}
+                {{ if eq .cLeft.button_settings.show true }}
+                {{ $l := replace .cLeft.button_settings.link ".md" "" }}
                 <a href="{{ $l }}" class="hero-button w-inline-block">
-                    <div class="text-block">{{ .button_settings.text }}</div>
+                    <div class="text-block">{{ .cLeft.button_settings.text }}</div>
                 </a>
                 {{ end }}
             </div>
