--- a/layouts/partials/components/content-left.html
+++ b/layouts/partials/components/content-left.html
@@ -1,6 +1,6 @@
 <section class="section-light">
-    {{ $m := .cLeft.image_settings.mask }}
-    <div {{ if eq $m "large to small" -}}class="polygon-large-to-small"{{- end }}{{ if eq $m "small to large" -}}class="polygon-small-to-large"{{- end }} style="background-image: url({{ .cUrl }}w_1600,q_50{{ .cLeft.image_settings.image }})">
+    {{ $m := .cLeft.style.mask }}
+    <div {{ if eq $m "large to small" -}}class="polygon-large-to-small"{{- end }}{{ if eq $m "small to large" -}}class="polygon-small-to-large"{{- end }} style="background-image: url({{ .cUrl }}w_1600,q_50{{ .cLeft.style.background_image }})">
         <div class="div-block _2"></div>
     </div>
     <div class="container">
