--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,7 +16,7 @@
             </div>
             <div class="hero-content flex-grow hero-video-container">
                 {{- if eq .Params.banner_media.video_type "youtube" -}} {{- $v := replace .Params.banner_media.youtube_url "https://www.youtube.com/watch?v=" "" -}} {{- $v2 := replace $v "https://youtu.be/" "" -}}
-                <a href="#" class="lightbox-link w-inline-block w-lightbox" style="background-image: linear-gradient(180deg, rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('https://img.youtube.com/vi/{{ $v2 }}/maxresdefault.jpg')">
+                <a href="#" class="lightbox-link _3d w-inline-block w-lightbox" style="background-image: linear-gradient(180deg, rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('https://img.youtube.com/vi/{{ $v2 }}/maxresdefault.jpg')">
                     <div class="play-icon"></div>
                     <script type="application/json" class="w-json">
                           {
